--- a/ux.html
+++ b/ux.html
@@ -73,13 +73,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://designaffairs.recruitee.com/o/senior-ux-designer-mfd-with-focus-usability-concept'>
+<h5><a href='https://designaffairs.recruitee.com/o/senior-ux-designer-mfd-with-focus-usability-concept'>
       Senior UX Designer (m/f/d) with focus Usability Concept - designaffairs GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mekari.recruiterbox.com/jobs/fk03f7q'>
+<h5><a href='http://mekari.recruiterbox.com/jobs/fk03f7q'>
     UX Writer at MEKARI (PT. Mid Solusi Nusantara)
 </a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta</span></p>
@@ -93,7 +93,7 @@
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ohUCafwH'>Capgemini Japan Careers - Senior UX Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ohUCafwH'>Capgemini Japan Careers - Senior UX Consultant</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -143,7 +143,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/conductor/jobs/1791129'>Job Application for Principal UX & Product Designer at Conductor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/conductor/jobs/1791129'>Job Application for Principal UX & Product Designer at Conductor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -193,7 +193,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248707-ux-designer-designer-publisher-'>Woongjin, Inc UX Designer (Designer / Publisher) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248707-ux-designer-designer-publisher-'>Woongjin, Inc UX Designer (Designer / Publisher) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -201,7 +201,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://sleekr.recruiterbox.com/jobs/fk03f7q/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sleekr.recruiterbox.com/jobs/fk03f7q/'>
     UX Writer at MEKARI (PT. Mid Solusi Nusantara)
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -219,7 +219,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bcg/c593c93a-9118-4097-9741-ad24aee4c5d4'>BCG Digital Ventures - Lead UX Designer - FinTech Venture Startup</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/c593c93a-9118-4097-9741-ad24aee4c5d4'>BCG Digital Ventures - Lead UX Designer - FinTech Venture Startup</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -227,15 +227,15 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bcg/e20a4899-1f65-4c99-96b1-e1897a612d50'>BCG Digital Ventures - Senior UX/UI Designer - Stealth Automotive Marketplace</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/e20a4899-1f65-4c99-96b1-e1897a612d50'>BCG Digital Ventures - Senior UX/UI Designer - Stealth Automotive Marketplace</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/5844df51-76a5-4831-b695-4ae808930cfa'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/5844df51-76a5-4831-b695-4ae808930cfa'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -309,7 +309,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nexity/743999692113916-gestionnaire-gerance-baux-commerciaux-h-f-cdi'>Nexity GESTIONNAIRE GERANCE BAUX COMMERCIAUX H/F CDI | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Nexity/743999692113916-gestionnaire-gerance-baux-commerciaux-h-f-cdi'>Nexity GESTIONNAIRE GERANCE BAUX COMMERCIAUX H/F CDI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -390,7 +390,7 @@ for candidates with solid technical foundations and a desire to continue learnin
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/withme.health/7900a5b8-d560-4f44-b0d3-02ee510eeddf'>WithMe Health - UX/UI Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/withme.health/7900a5b8-d560-4f44-b0d3-02ee510eeddf'>WithMe Health - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -422,7 +422,7 @@ or check?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kisi.recruitee.com/o/ui-ux-designer'>
+<h5><a href='https://kisi.recruitee.com/o/ui-ux-designer'>
       UI &amp; UX Designer - Kisi
     </a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
